Split navigation-timing UMAs based on whether renderer is backgrounded.

This CL adds extra suffixes for navigation-timing UMAs, based on whether
the renderer handling the navigation is backgrounded or not.

Since we plan to restrict the hang-renderer-dialog to only show up for
foreground tabs, the navigation commit timeout should be based on
numbers that exclude backgrounded renderers.  The new UMAs should help
with getting such numbers.

Bug: 881812
Change-Id: I68fd4f83dbb09ee036d1a4fd23591c8255c66398
Reviewed-on: https://chromium-review.googlesource.com/1220470
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Reviewed-by: Steven Holte <holte@chromium.org>
Commit-Queue: Łukasz Anforowicz <lukasza@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591213}
Former-commit-id: 54d75db2a274d03cc90584ba6b5afaa7fc1ef959